# Licensed under the Apache-2.0 license

[package]
name = "caliptra-runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bitfield.workspace = true
caliptra-cfi-lib-git = { workspace = true, default-features = false, features = [
    "cfi",
    "cfi-counter",
] }
caliptra-cfi-derive-git.workspace = true
caliptra_common = { workspace = true, default-features = false, features = [
    "runtime",
] }
caliptra-api.workspace = true
caliptra-cpu.workspace = true
caliptra-drivers = { workspace = true, features = ["runtime"] }
caliptra-error = { workspace = true, default-features = false }
caliptra-image-types = { workspace = true, default-features = false }
caliptra-auth-man-types = { workspace = true, default-features = false }
caliptra-kat.workspace = true
caliptra-lms-types.workspace = true
caliptra-registers.workspace = true
caliptra-x509 = { workspace = true, default-features = false }
dpe = { workspace = true, features = ["arbitrary_max_handles"] }
constant_time_eq.workspace = true
crypto.workspace = true
platform.workspace = true
ufmt.workspace = true
zerocopy.workspace = true
arrayvec.workspace = true
caliptra-image-verify = { workspace = true, default-features = false }
zeroize.workspace = true
bitflags.workspace = true
memoffset.workspace = true
ureg.workspace = true
ocp-eat.workspace = true

[build-dependencies]
caliptra_common = { workspace = true, default-features = false }
caliptra-gen-linker-scripts.workspace = true
cfg-if.workspace = true

[dev-dependencies]
aes.workspace = true
aes-gcm.workspace = true
caliptra-api.workspace = true
caliptra-builder.workspace = true
caliptra_common = { workspace = true, default-features = false, features = [
    "std",
] }
caliptra-emu-bus.workspace = true
caliptra-hw-model.workspace = true
caliptra-image-elf.workspace = true
caliptra-image-fake-keys.workspace = true
caliptra-image-gen.workspace = true
caliptra-image-crypto.workspace = true
caliptra-auth-man-gen.workspace = true
caliptra-image-serde.workspace = true
caliptra-test.workspace = true
caliptra-cfi-lib-git = { workspace = true, features = ["cfi-test"] }
cbc.workspace = true
cipher.workspace = true
coset.workspace = true
ctr.workspace = true
fips204.workspace = true
hkdf.workspace = true
hmac.workspace = true
ml-dsa.workspace = true
openssl.workspace = true
p384.workspace = true
sha2 = { version = "0.10.2", default-features = false, features = ["compress"] }
spki.workspace = true
cms.workspace = true
rand.workspace = true
wycheproof.workspace = true
x509-parser.workspace = true
x509-cert.workspace = true

[features]
default = ["std"]
emu = ["caliptra_common/emu", "caliptra-drivers/emu"]
itrng = ["caliptra-drivers/itrng", "caliptra-hw-model/itrng"]
riscv = ["caliptra-cpu/riscv"]
std = ["ufmt/std", "caliptra_common/std"]
slow_tests = []
verilator = ["caliptra-hw-model/verilator"]
fips_self_test = []
no-cfi = [
    "caliptra-image-verify/no-cfi",
    "caliptra-drivers/no-cfi",
    "dpe/no-cfi",
]
fpga_realtime = [
    "caliptra-drivers/fpga_realtime",
    "caliptra-hw-model/fpga_realtime",
]
fpga_subsystem = [
    "caliptra-drivers/fpga_subsystem",
    "caliptra-hw-model/fpga_subsystem",
]
fips-test-hooks = ["caliptra-drivers/fips-test-hooks"]
ocp-lock = ["caliptra-hw-model/ocp-lock"]
