# Licensed under the Apache-2.0 license

[package]
name = "caliptra-test-harness"
version = "0.1.0"
edition = "2021"

[features]
emu = []
riscv = []

# Whether or not this is a harness for a runtime firmware image
runtime = []

[dependencies]
cfg-if.workspace = true
caliptra-drivers = { workspace = true, features=["emu"] }
