# Licensed under the Apache-2.0 license

[package]
name = "caliptra-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
asn1.workspace = true
caliptra-builder.workspace = true
caliptra_common = { workspace = true, default-features = false }
caliptra-coverage.workspace = true
caliptra-drivers.workspace = true
caliptra-hw-model-types.workspace = true
caliptra-image-types.workspace = true
caliptra-runtime = { workspace = true, default-features = false }
elf.workspace = true
openssl.workspace = true
rand.workspace = true
zerocopy.workspace = true
caliptra-hw-model.workspace = true

[dev-dependencies]
caliptra-builder.workspace = true
openssl.workspace = true
caliptra-emu-cpu.workspace = true

[features]
fpga_realtime = ["caliptra-hw-model/fpga_realtime"]
itrng = ["caliptra-hw-model/itrng"]
verilator = ["caliptra-hw-model/verilator"]
fips_self_test = ["caliptra-runtime/fips_self_test"]
test_env_immutable_rom = []
"hw-1.0" = ["caliptra-builder/hw-1.0", "caliptra-drivers/hw-1.0"]
