# Licensed under the Apache-2.0 license

[package]
name = "caliptra-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
asn1.workspace = true
caliptra-api.workspace = true
caliptra-api-types.workspace = true
caliptra-builder.workspace = true
caliptra_common = { workspace = true, default-features = false }
caliptra-coverage.workspace = true
caliptra-drivers = { workspace = true, features = ["fips-test-hooks"] }
caliptra-hw-model-types.workspace = true
caliptra-image-crypto.workspace = true
caliptra-image-elf.workspace = true
caliptra-image-fake-keys.workspace = true
caliptra-image-gen.workspace = true
caliptra-image-types.workspace = true
caliptra-image-verify = { workspace = true, default-features = false }
caliptra-runtime = { workspace = true, default-features = false }
elf.workspace = true
openssl.workspace = true
rand.workspace = true
regex.workspace = true
zerocopy.workspace = true
caliptra-hw-model.workspace = true
dpe.workspace = true
ureg.workspace = true
caliptra-x509 = { workspace = true, default-features = false }

[dev-dependencies]
caliptra-builder.workspace = true
openssl.workspace = true
caliptra-emu-cpu.workspace = true

[features]
fpga_realtime = ["caliptra-hw-model/fpga_realtime"]
itrng = ["caliptra-hw-model/itrng"]
verilator = ["caliptra-hw-model/verilator"]
fips_self_test = ["caliptra-runtime/fips_self_test"]
test_env_immutable_rom = []
