# Licensed under the Apache-2.0 license

[package]
name = "caliptra-x509"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true
openssl.workspace = true
rand.workspace = true
x509-parser.workspace = true

[features]
default = ["std"]
std = []
