# Licensed under the Apache-2.0 license

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[features]
fpga_realtime = []
fpga_subsystem = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
log.workspace = true
octocrab = "0.38.0"
serde = { workspace = true, features = ["derive"] }
simple_logger.workspace = true
tokio = { version = "1.49.0", features = ["rt", "macros"] }
