# Licensed under the Apache-2.0 license

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[features]
fpga_realtime = []
fpga_subsystem = []

[dependencies]
anyhow.workspace = true
bitstream-downloader.workspace = true
caliptra-builder.workspace = true
clap.workspace = true
hex = "0.4"
log.workspace = true
octocrab = "0.38.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
simple_logger.workspace = true
size-history.workspace = true
tokio = { version = "1.49.0", features = ["rt", "macros"] }
toml_edit.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }
