# Licensed under the Apache-2.0 license

[package]
name = "caliptra-zeros"
version = "0.1.0"
edition = "2021"

[build-dependencies]
caliptra_common = { workspace = true, default-features = false }
caliptra-gen-linker-scripts.workspace = true
cfg-if.workspace = true

[dev-dependencies]
caliptra-api.workspace = true
caliptra-builder.workspace = true
caliptra-drivers.workspace = true
caliptra-error.workspace = true
caliptra-hw-model.workspace = true

[features]
default = ["std"]
std = ["caliptra_common/std"]
riscv = []
fmc = []
