# Licensed under the Apache-2.0 license

[package]
name = "bitstream-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.227", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.9.7"
