# Licensed under the Apache-2.0 license

[package]
name = "caliptra-size-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-builder.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tinytemplate.workspace = true

[lints]
workspace = true