# Licensed under the Apache-2.0 license

[package]
name = "caliptra-size-history-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "caliptra-size-history"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-builder.workspace = true

size-history = { git = "https://github.com/chipsalliance/caliptra-infra.git", package = "caliptra-size-history", rev = "64e75e17e1a2eb07ff8dd6698932af82182da85e" }
